--- a/templates/master.html
+++ b/templates/master.html
@@ -62,30 +62,54 @@
       </div>
     </div>
   </section>
-<section class="showcase">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-        {% block content %}
-            <div class="page-header">
-                <h2 class="mb-4 mt-4 text-center">Overview of Training Dataset</h2>
-            </div>
-        {% endblock %}
-
+  <section class="showcase">
+    <div class="container-fluid p-0">
+      {% block content %}
+          <div class="page-header">
+              <h2 class="mb-5 mt-4 text-center">Overview of Training Dataset</h2>
+          </div>
+      {% endblock %}
+      <div class="row no-gutters">
         {% for id in ids %}
-            <div id="{{id}}"></div>
+            <!-- <div class="col-lg-6 id="{{id}}"></div> -->
+            <div id="{{id}}" class="col-lg-6"></div>
         {% endfor %}
-        </div>
       </div>
     </div>
   </section>
+  <!-- <section class="showcase">
+    <div class="container-fluid p-0">
+      <div class="row no-gutters">
+
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
+        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+          <h2>Fully Responsive Design</h2>
+          <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
+        </div>
+      </div>
+      <div class="row no-gutters">
+        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
+        <div class="col-lg-6 my-auto showcase-text">
+          <h2>Updated For Bootstrap 4</h2>
+          <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
+        </div>
+      </div>
+      <div class="row no-gutters">
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
+        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+          <h2>Easy to Use &amp; Customize</h2>
+          <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
+        </div>
+      </div>
+    </div>
+  </section> -->
 
   <!-- Footer -->
   <footer class="footer bg-light">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
-          <p class="text-muted small mb-4 mb-lg-0">&copy; Disaster Response ML 2019. All Rights Reserved.</p>
+          <p class="text-muted small mb-4 mb-lg-0">&copy; Disaster Response Messages Classifier 2019. All Rights Reserved.</p>
         </div>
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
